--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -6,7 +6,7 @@ all:
   vars:
     # 공통 변수
     ansible_python_interpreter: /usr/bin/python3
-    report_dir: /app/project1/reports
+    report_dir: /app/infra/reports
     
     # 서비스 목록 (헬스체크 대상)
     monitored_services:
